--- a/proyecto/public/css/estilos.css
+++ b/proyecto/public/css/estilos.css
@@ -44,7 +44,7 @@ body,html{
 }
 
 .container-2{
-    min-height:100% !important;
+    min-height: 100vh;
     margin-top: 68px !important;
 }
 
@@ -55,6 +55,7 @@ body,html{
 }
 footer{
     border-top: 1px solid rgba(207, 207, 207, 0.35);
+
 }
 
 .alert-preloader{
