--- a/proyecto/public/css/anim-page.css
+++ b/proyecto/public/css/anim-page.css
@@ -27,7 +27,7 @@
 
 .loader-g .loader-outter {
     position: absolute;
-    border: 4px solid #FBB017;
+    border: 4px solid #17479E;
     border-left-color: transparent;
     border-bottom: 0;
     width: 100%;
@@ -39,7 +39,7 @@
 
 .loader-g .loader-inner {
     position: absolute;
-    border: 4px solid #FBB017;
+    border: 4px solid #17479E;
     border-radius: 50%;
     width: 50px;
     height: 50px;
