--- a/proyecto/public/css/custom.css
+++ b/proyecto/public/css/custom.css
@@ -75,3 +75,13 @@ div.admon hr{
 footer{
   overflow: hidden;
 }
+
+.activo-l{
+  box-shadow: 0 4px 1px -1px #17479E;
+  color: black !important;
+}
+
+li.custom-nav:hover{
+  transition: .3s;
+  box-shadow: 0 4px 1px -1px #17479E !important;
+}
