--- a/proyecto/public/css/estilos-main-01.css
+++ b/proyecto/public/css/estilos-main-01.css
@@ -157,7 +157,7 @@ a {
   background-color: transparent;
 }
 a:hover {
-  color: #FBB017;
+  color: #f4623a;
   text-decoration: underline;
 }
 
@@ -3013,10 +3013,26 @@ input[type=button].btn-block {
   text-align: left;
   list-style: none;
   background-color: #fff;
+
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.25rem;
+  border-bottom: 5px solid white;
+  margin-top: -1px;
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  font-size: 0.9rem;
 }
+.navbar-toggler {
+  color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 995px) { 
+  .dropdown-menu {
+    border-bottom: 3px solid #FF7F29;
+    border-top: 3px solid #FF7F29;
+  }
+ }
+
 
 .dropdown-menu-left {
   right: auto;
@@ -3157,7 +3173,7 @@ input[type=button].btn-block {
   height: 0;
   margin: 0.5rem 0;
   overflow: hidden;
-  border-top: 1px solid #e9ecef;
+  border-top: 1px solid #0075C4;
 }
 
 .dropdown-item {
@@ -3180,7 +3196,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #17479E;
+  background-color: #F47929;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -4039,7 +4055,14 @@ input[type=button].btn-block {
 .navbar-toggler:hover, .navbar-toggler:focus {
   text-decoration: none;
 }
+.navbar-light .navbar-toggler {
+  color: rgba(0, 0, 0, 0.5) !important;
+  border-color: rgba(0, 0, 0, 0.1) !important;
+}
 
+.nav-tog{
+  border: 1px solid gray !important;
+}
 .navbar-toggler-icon {
   display: inline-block;
   width: 1.5em;
@@ -9999,7 +10022,7 @@ html {
 hr.divider {
   max-width: 250px;
   border-width: 0.3rem;
-  border-color: #17479E;
+  border-color: #0075C4;
 }
 
 hr.light {
@@ -10041,10 +10064,10 @@ hr.light {
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #FBB017;
+  color: #6c757d;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #FBB017 !important;
+  color: #f4623a !important;
 }
 @media (min-width: 992px) {
   #mainNav {
@@ -10071,6 +10094,7 @@ hr.light {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     background-color: #fff;
   }
+
   #mainNav.navbar-scrolled .navbar-brand {
     color: #212529;
   }
@@ -10158,12 +10182,21 @@ header.masthead h1 {
 }
 
 .sp{
-  background-color:#17479E;
+  background-color:#0075C4;
   margin: 0px !important;
   bottom: 0;
 }
 
 
+.sp-divider{
+  background-color:#FF7F29;
+  margin: 0px !important;
+  bottom: 0;
+}
+
+.bg-white{
+  background-color: white;
+}
 .sp p{
   margin: 0 !important;
   font-size: .9rem;
@@ -10236,8 +10269,10 @@ hr.divider-sm {
 
 .carousel-caption h5{
   color: white;
-  font-size: 1.3rem;
+  font-size: .8rem;
   padding-top:5px ;
+  padding-right:5px ;
+  padding-left:5px ;
 }
 
 .carousel-caption h5 a{
@@ -10246,4 +10281,104 @@ hr.divider-sm {
 
 .carousel-caption h5 a:hover{
   text-decoration: none;
+}
+
+.reset-img-size{
+  max-height: 330px;
+  overflow: hidden;
+}
+@media (max-width: 768px) { 
+  .reset-img-size{
+    max-height: 299px;
+    overflow: hidden;
+  }
+
+  .c-margin-sm{
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 576px) {
+  .reset-img-size{
+    max-height: 210px;
+    overflow: hidden;
+  }
+
+  .carousel-caption h5{
+    color: white;
+    font-size: .6rem;
+
+  }
+
+  .c-margin-sm{
+    margin-bottom: 50px;
+  }
+}
+
+.img-res-noticia{
+  max-height: 150px;
+  min-height: 150px;
+  overflow: hidden;
+}
+
+
+
+
+
+.n-1, .n-2{
+margin-bottom: 15px;
+}
+
+.n-3{
+  margin-top: 15px;
+}
+
+.cap-image-p{
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  right: 15px;
+  background-color: #F47929;
+}
+
+.cap-image-p h5{
+  color: white;
+  font-size: .8rem;
+  padding-top:5px ;
+  padding-right:5px ;
+  padding-left:5px ;
+}
+
+.cap-image-p h5 a{
+  color: white;
+}
+
+.cap-image-p h5 a:hover{
+  text-decoration: none;
+}
+
+@media (max-width: 768px) { 
+  .img-res-noticia{
+    max-height: 299px;
+    overflow: hidden;
+  }
+
+  .n-1{
+    margin-top: 50px;
+  }
+
+  .n-2, .n-3, .n-4{
+    margin: 0;
+  }
+}
+@media (max-width: 576px) {
+  .img-res-noticia{
+    max-height: 210px;
+    overflow: hidden;
+  }
+
+  .cap-image-p h5 h5{
+    color: white;
+    font-size: .6rem;
+
+  }
 }
