--- a/proyecto/public/css/estilos-main-01.css
+++ b/proyecto/public/css/estilos-main-01.css
@@ -4624,6 +4624,7 @@ input[type=button].btn-block {
   text-decoration: none;
   background-color: #ffff;
   border-color: #dee2e6;
+  color: #0075C4;
 }
 .page-link:focus {
   z-index: 3;
@@ -4643,8 +4644,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #FBB017;
-  border-color: #FBB017;
+  background-color: #FF7F29;
+  border-color: #FF7F29;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
